--- a/home.html
+++ b/home.html
@@ -1,13 +1,76 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
-    <link rel="stylesheet" href="home.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>HOme</title>
+  <link rel="stylesheet" href="home.css">
 </head>
 <body>
-    <h1>Bienvenido a la nueva página</h1>
-    <p>¡Esta es la página que se abrió al hacer clic en "Ver Más"!</p>
+  <!-- Header -->
+  <header class="header">
+    <h1></h1>
+    <p></p>
+  </header>
+
+  <!-- Main Content -->
+  <main class="main-content">
+    <h2></h2>
+    <ul class="faq-list">
+        <li class="faq-item">
+            <h3 class="faq-question">Sobre mí</h3>
+            <p class="faq-answer">Soy Aleeza Sajid, una apasionada estudiante de desarrollo web con habilidades en HTML y CSS. Me encanta crear sitios web modernos, funcionales y accesibles. Estoy en constante aprendizaje para mejorar mis habilidades y construir experiencias web increíbles.</p>
+        </li>
+    </ul>
+    
+    <li class="faq-item">
+        <h3 class="faq-question">Habilidades</h3>
+        <p class="faq-answer">
+            ✔️ HTML5 y CSS3 <br>
+            ✔️ Diseño responsivo <br>
+            ✔️ UI/UX básico <br>
+            ✔️ Git y GitHub
+        </p>
+    </li>
+    <li class="faq-item">
+        <h3 class="faq-question">Proyectos Destacados</h3>
+        <p class="faq-answer">
+            🔹 <strong>Quick Assistance - Página de Preguntas Frecuentes</strong> <br><br>
+            <strong>Descripción:</strong> Sitio web de preguntas frecuentes con diseño moderno y funcionalidad interactiva. <br><br>
+            <strong>Tecnologías:</strong> HTML, CSS, JavaScript
+        </p>
+    </li>
+    
+    <li class="faq-item">
+        <h3 class="faq-question">Proyectos Destacados</h3>
+        <p class="faq-answer">
+            🔹 <strong>Landing Page para Negocios</strong> <br><br>
+            <strong>Descripción:</strong> Página de aterrizaje profesional para promocionar servicios o productos. <br><br>
+            <strong>Tecnologías:</strong> HTML, CSS
+        </p>
+    </li>    
+    <div class="go-back-container">
+      <button class="back-btn" onclick="window.location.href='index.html'">Go Back</button>
+    </div>
+  </main>
+
+  <!-- Footer -->
+  <footer class="footer">
+    <div class="footer-bottom">
+      <p>&copy; 2024 AI Chatbot. All Rights Reserved.</p>
+      <p>Designed by ❤ ALEEZA SAJID</p>
+    </div>
+  </footer>
+
+  <script>
+    // Toggle FAQ answer visibility
+    const faqItems = document.querySelectorAll('.faq-item');
+    faqItems.forEach(item => {
+      item.addEventListener('click', () => {
+        const answer = item.querySelector('.faq-answer');
+        answer.classList.toggle('active');
+      });
+    });
+  </script>
 </body>
 </html>
