cambia index.html style.css home.html home.css contacto.html contacto.css

--- a/home.html
+++ b/home.html
@@ -9,7 +9,7 @@
 <body>
   <!-- Header -->
   <header class="header">
-    <h1></h1>
+    <h1>MI PORTFOLIO</h1>
     <p></p>
   </header>
 
@@ -17,47 +17,50 @@
   <main class="main-content">
     <h2></h2>
     <ul class="faq-list">
-        <li class="faq-item">
-            <h3 class="faq-question">Sobre mí</h3>
-            <p class="faq-answer">Soy Aleeza Sajid, una apasionada estudiante de desarrollo web con habilidades en HTML y CSS. Me encanta crear sitios web modernos, funcionales y accesibles. Estoy en constante aprendizaje para mejorar mis habilidades y construir experiencias web increíbles.</p>
-        </li>
-    </ul>
-    
-    <li class="faq-item">
-        <h3 class="faq-question">Habilidades</h3>
-        <p class="faq-answer">
-            ✔️ HTML5 y CSS3 <br>
-            ✔️ Diseño responsivo <br>
-            ✔️ UI/UX básico <br>
-            ✔️ Git y GitHub
-        </p>
-    </li>
-    <li class="faq-item">
-        <h3 class="faq-question">Proyectos Destacados</h3>
-        <p class="faq-answer">
-            🔹 <strong>Quick Assistance - Página de Preguntas Frecuentes</strong> <br><br>
-            <strong>Descripción:</strong> Sitio web de preguntas frecuentes con diseño moderno y funcionalidad interactiva. <br><br>
-            <strong>Tecnologías:</strong> HTML, CSS, JavaScript
-        </p>
-    </li>
-    
-    <li class="faq-item">
-        <h3 class="faq-question">Proyectos Destacados</h3>
-        <p class="faq-answer">
-            🔹 <strong>Landing Page para Negocios</strong> <br><br>
-            <strong>Descripción:</strong> Página de aterrizaje profesional para promocionar servicios o productos. <br><br>
-            <strong>Tecnologías:</strong> HTML, CSS
-        </p>
-    </li>    
+      <li class="faq-item">
+          <h3 class="faq-question">Sobre mí</h3>
+          <p class="faq-answer">Soy Aleeza Sajid, una apasionada estudiante de desarrollo web con habilidades en HTML y CSS. Me encanta crear sitios web modernos, funcionales y accesibles. Estoy en constante aprendizaje para mejorar mis habilidades y construir experiencias web increíbles....</p>
+      </li>
+  
+      <li class="faq-item">
+          <h3 class="faq-question">Habilidades</h3>
+          <p class="faq-answer">
+              ✔️ HTML5 y CSS3 <br>
+              ✔️ Diseño responsivo <br>
+              ✔️ javaScript<br>
+              ✔️ Git y GitHub
+          </p>
+      </li>
+  
+      <li class="faq-item">
+          <h3 class="faq-question">Proyectos Destacados</h3>
+          <p class="faq-answer">
+              🔹 <strong>Quick Assistance - Página de Preguntas Frecuentes</strong> <br><br>
+              <strong>Descripción:</strong> Sitio web de preguntas frecuentes con diseño moderno y funcionalidad interactiva. <br><br>
+              <strong>Tecnologías:</strong> HTML, CSS, JavaScript
+          </p>
+      </li>
+  
+      <li class="faq-item">
+          <h3 class="faq-question">Landing Page para Negocios</h3>
+          <p class="faq-answer">
+              🔹 <strong>Landing Page para Negocios</strong> <br><br>
+              <strong>Descripción:</strong> Página de aterrizaje profesional para promocionar servicios o productos. <br><br>
+              <strong>Tecnologías:</strong> HTML, CSS
+          </p>
+      </li>
+  </ul>  
     <div class="go-back-container">
       <button class="back-btn" onclick="window.location.href='index.html'">Go Back</button>
+      <button class="contact-btn" onclick="window.location.href='contact.html'">Contact Me</button>
     </div>
+  
   </main>
 
   <!-- Footer -->
   <footer class="footer">
     <div class="footer-bottom">
-      <p>&copy; 2024 AI Chatbot. All Rights Reserved.</p>
+      <p>&copy; </p>
       <p>Designed by ❤ ALEEZA SAJID</p>
     </div>
   </footer>
