--- a/contact.html
+++ b/contact.html
@@ -13,6 +13,16 @@
   </header>
 
   <main class="main-content">
+    <!-- Información a la izquierda -->
+    <div class="contact-info">
+      <h2>Contact Information</h2>
+      <p>Email: <a href="CorreoElectonico">aleezas947@gmail.com</a></p>
+      <p>LinkedIn: <a href="https://www.linkedin.com/in/aleeza-sajid-875140337/overlay/about-this-profile/?" target="_blank">Aleeza Sajid</a></p>
+      <p>GitHub: <a href="https://github.com/Aleeza951" target="_blank">Aleeza951</a></p>
+      <p>Phone: <a href="telefono">+34 631 87 47 05</a></p>
+    </div>
+
+    <!-- Formulario a la derecha -->
     <form action="#" method="POST" class="contact-form">
       <label for="name">Full Name:</label>
       <input type="text" id="name" name="name" required>
@@ -27,11 +37,18 @@
     </form>
   </main>
 
+  <div class="go-back-container">
+    <button class="back-btn" onclick="window.location.href='index.html'">Go Back</button>
+  </div>
+
   <footer class="footer">
     <div class="footer-bottom">
-      <p>&copy; 2024 Aleeza Sajid</p>
+      <p>&copy;</p>
       <p>Designed by ❤ Aleeza Sajid</p>
     </div>
   </footer>
+</body>
+</html>
+
 </body>
 </html>
