--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aleeza Sajid</title>
     <link rel="stylesheet" href="style.css"> 
+    
 </head>
 <body>
     <div class="container">
@@ -12,5 +13,12 @@
         <a href="home.html" target="_blank"> </a>
         <button class="btn">Ver Más</button>
     </div>
+
+    <script>
+
+document.querySelector(".btn").addEventListener("click", function() {
+    window.location.href = "home.html";
+});
+    </script>
 </body>
 </html>
