--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
       <p>Email: <a href="CorreoElectonico">aleezas947@gmail.com</a></p>
       <p>LinkedIn: <a href="https://www.linkedin.com/in/aleeza-sajid-875140337/overlay/about-this-profile/?" target="_blank">Aleeza Sajid</a></p>
       <p>GitHub: <a href="https://github.com/Aleeza951" target="_blank">Aleeza951</a></p>
-      <p>Phone: <a href="telefono">+34 631 87 47 05</a></p>
+      <p>Teléfono: <a href="telefono">+34 631 87 47 05</a></p>
     </div>
 
     <!-- Formulario a la derecha -->
@@ -47,8 +47,5 @@
       <p>Designed by ❤ Aleeza Sajid</p>
     </div>
   </footer>
-</body>
-</html>
-
 </body>
 </html>
