cambia index.html index.css home.htmll home.css

--- a/home.html
+++ b/home.html
@@ -3,14 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>HOme</title>
+  <title>Contact Me</title>
   <link rel="stylesheet" href="home.css">
 </head>
 <body>
   <!-- Header -->
   <header class="header">
-    <h1>MI PORTFOLIO</h1>
-    <p></p>
+    <div class="title-container">
+      <h1>MI PORTFOLIO</h1>
+  </div>
+
   </header>
 
   <!-- Main Content -->
@@ -101,7 +103,7 @@
   <p class="faq-answer">
       📋 <strong>Planificación y bocetos</strong><br>
       🎨 <strong>Diseño en Figma</strong><br>
-      🔧 <strong>Desarrollo en HTML & CSS</strong><br>
+      🔧 <strong>Desarrollo en HTML, CSS, javaScript</strong><br>
       🚀 <strong>Optimización y pruebas</strong><br>
       ✅ <strong>Publicación y mantenimiento</strong>
   </p>
