cambia kindex.html style.css home.html home.css contacto.css

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="extra-info">
             <section class="hero">
                 <h1>Welcome to Aleeza's World</h1>
-                <p>Discover more about me and my work.</p>
+                <p>Discover more about me and my work...</p>
                 <button class="btn">Ver Más</button>
               </section>
               <button class="btn change-color">Cambiar Color</button>
