--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Contact Me</title>
+  <title>HOME</title>
   <link rel="stylesheet" href="home.css">
 </head>
 <body>
@@ -135,6 +135,7 @@
         answer.classList.toggle('active');
       });
     });
+
   </script>
 </body>
 </html>
