cambia home.html home.css contacto.html contacto.css

--- a/home.html
+++ b/home.html
@@ -12,7 +12,6 @@
     <div class="title-container">
       <h1>MI PORTFOLIO</h1>
   </div>
-
   </header>
 
   <!-- Main Content -->
@@ -35,15 +34,6 @@
         </p>
     </li>
     
-      <li class="faq-item">
-          <h3 class="faq-question">🚀 Proyectos Destacados</h3>
-          <p class="faq-answer">
-              🔹 <strong>Quick Assistance - Página de Preguntas Frecuentes</strong> <br><br>
-              <strong>Descripción:</strong> Sitio web de preguntas frecuentes con diseño moderno y funcionalidad interactiva. <br><br>
-              <strong>Tecnologías:</strong> HTML, CSS, JavaScript
-          </p>
-      </li>
-  
       <li class="faq-item">
           <h3 class="faq-question">📢 Landing Page para Negocios</h3>
           <p class="faq-answer">
@@ -70,6 +60,14 @@
       🛠️ <strong>Tecnologías:</strong> HTML, CSS, [otras herramientas usadas] <br>
       🔗 <strong>Demo:</strong> <a href="[Enlace al proyecto]" target="_blank">Ver Proyecto</a> | 
       📂 <strong>Código:</strong> <a href="[Enlace a GitHub]" target="_blank">Ver en GitHub</a>  
+  </p>
+</li>
+<li class="faq-item">
+  <h3 class="faq-question">🚀 Proyectos Destacados 3</h3>
+  <p class="faq-answer">
+      🔹 <strong>Quick Assistance - Página de Preguntas Frecuentes</strong> <br><br>
+      <strong>Descripción:</strong> Sitio web de preguntas frecuentes con diseño moderno y funcionalidad interactiva. <br><br>
+      <strong>Tecnologías:</strong> HTML, CSS, JavaScript
   </p>
 </li>
 <li class="faq-item">
@@ -122,7 +120,7 @@
   <footer class="footer">
     <div class="footer-bottom">
       <p>&copy; </p>
-      <p>Designed by ❤ ALEEZA SAJID</p>
+      <p>Designed by ❤ ALEEZA SAJID ❤ </p>
     </div>
   </footer>
 
