--- a/contact.html
+++ b/contact.html
@@ -44,7 +44,7 @@
   <footer class="footer">
     <div class="footer-bottom">
       <p>&copy;</p>
-      <p>Designed by ❤ Aleeza Sajid</p>
+      <p>Designed by ❤ ALEEZA SAJID ❤ </p>
     </div>
   </footer>
 </body>
