cambia index.html style.css home.html home.cssthankyou.css

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <p>Discover more about me and my work...</p>
                 <button class="btn">Ver Más</button>
             </section>
-            <button class="btn change-color">Cambiar Color</button>
+            <button class="btn change-color"></button>
         </div>
       
         <div id="clock"></div>
