--- a/contact.html
+++ b/contact.html
@@ -23,8 +23,7 @@
     </div>
 
     <!-- Formulario a la derecha -->
-    <form action="#" method="POST" class="contact-form">
-      <label for="name">Full Name:</label>
+    <form onsubmit="window.location.href='thankyou.html'; return false;" class="contact-form">      <label for="name">Full Name:</label>
       <input type="text" id="name" name="name" required>
 
       <label for="email">Email:</label>
@@ -51,7 +50,5 @@
   <script>
 
 </script>
-
-  </script>
 </body>
 </html>
