cambia contact.html home.html

--- a/contact.html
+++ b/contact.html
@@ -16,14 +16,16 @@
     <!-- Información a la izquierda -->
     <div class="contact-info">
       <h2>Contact Information</h2>
-      <p>Email: <a href="CorreoElectonico">aleezas947@gmail.com</a></p>
+      <p>Email: <a href="mailto:aleezas947@gmail.com">aleezas947@gmail.com</a></p>
+
       <p>LinkedIn: <a href="https://www.linkedin.com/in/aleeza-sajid-875140337/overlay/about-this-profile/?" target="_blank">Aleeza Sajid</a></p>
       <p>GitHub: <a href="https://github.com/Aleeza951" target="_blank">Aleeza951</a></p>
       <p>Teléfono: <a href="telefono">+34 631 87 47 05</a></p>
     </div>
 
     <!-- Formulario a la derecha -->
-    <form onsubmit="window.location.href='thankyou.html'; return false;" class="contact-form">      <label for="name">Full Name:</label>
+    <form onsubmit="window.location.href='thankyou.html'; return false;" class="contact-form">      
+      <label for="name">Full Name:</label>
       <input type="text" id="name" name="name" required>
 
       <label for="email">Email:</label>
