--- a/home.html
+++ b/home.html
@@ -30,8 +30,8 @@ En mi tiempo libre, me gusta experimentar con nuevas tecnologías y contribuir a
         <p class="faq-answer">
             ✔️ <strong>Frontend:</strong> HTML5, CSS3, javaScript <br>
             ✔️ <strong>Diseño Responsivo:</strong> Flexbox, Grid, Mobile-first <br>
-            ✔️ <strong>UI/UX:</strong> Figma, accesibilidad web <br>
-            ✔️ <strong>Herramientas:</strong> Git, GitHub, WordPress
+            ✔️ <strong>UI/UX:</strong> Figma <br>
+            ✔️ <strong>Herramientas:</strong> Git, GitHub
         </p>
     </li>
     
@@ -58,11 +58,11 @@ En mi tiempo libre, me gusta experimentar con nuevas tecnologías y contribuir a
       <li class="faq-item">
         <h3 class="faq-question">🌍 Proyectos Destacados 1</h3>
         <p class="faq-answer">
-            <strong>1️⃣ [Nombre del Proyecto]</strong> <br><br>
+            <strong>1️⃣ Tienda online de Relojes]</strong> <br><br>
             📌 <strong>Descripción:</strong> Explica brevemente qué hace el proyecto. <br>
-            🛠️ <strong>Tecnologías:</strong> HTML, CSS, [otras herramientas usadas] <br>
-            🔗 <strong>Demo:</strong> <a href="[Enlace al proyecto]" target="_blank">Ver Proyecto</a> | 
-            📂 <strong>Código:</strong> <a href="[Enlace a GitHub]" target="_blank">Ver en GitHub</a>  
+            🛠️ <strong>Tecnologías:</strong> HTML, CSS, javaScript <br>
+            🔗 <strong>Demo:</strong> <a href="https://github.com/nereasaga/proyecto-tienda-online" target="_blank">Ver Proyecto</a> | 
+            📂 <strong>Código:</strong> <a href="https://github.com/Aleeza951" target="_blank">Ver en GitHub</a>  
         </p>
     </li>
     <li class="faq-item">
@@ -73,14 +73,6 @@ En mi tiempo libre, me gusta experimentar con nuevas tecnologías y contribuir a
       🛠️ <strong>Tecnologías:</strong> HTML, CSS, [otras herramientas usadas] <br>
       🔗 <strong>Demo:</strong> <a href="[Enlace al proyecto]" target="_blank">Ver Proyecto</a> | 
       📂 <strong>Código:</strong> <a href="[Enlace a GitHub]" target="_blank">Ver en GitHub</a>  
-  </p>
-</li>
-<li class="faq-item">
-  <h3 class="faq-question">🚀 Proyectos Destacados 3</h3>
-  <p class="faq-answer">
-      🔹 <strong>Quick Assistance - Página de Preguntas Frecuentes</strong> <br><br>
-      <strong>Descripción:</strong> Sitio web de preguntas frecuentes con diseño moderno y funcionalidad interactiva. <br><br>
-      <strong>Tecnologías:</strong> HTML, CSS, JavaScript
   </p>
 </li>
 <li class="faq-item">
