cambiar home.html

--- a/home.html
+++ b/home.html
@@ -53,28 +53,34 @@ En mi tiempo libre, me gusta experimentar con nuevas tecnologías y contribuir a
               Formularios HTML: Para suscripción y contacto.
           
           Es una página estática con funcionalidades interactivas básicas.
+          🔗 <strong>Demo:</strong> <a href="https://lustrous-semifreddo-7ca80f.netlify.app/" target="_blank">Ver Proyecto</a> | 
+          📂 <strong>Git:</strong> <a href="https://github.com/Aleeza951" target="_blank">Ver en GitHub</a>  
           </p>
       </li>
       <li class="faq-item">
-        <h3 class="faq-question">🌍 Proyectos Destacados 1</h3>
+        <h3 class="faq-question">🌍Ghari Relojes</h3>
         <p class="faq-answer">
             <strong>1️⃣ Tienda online de Relojes]</strong> <br><br>
-            📌 <strong>Descripción:</strong> Explica brevemente qué hace el proyecto. <br>
+            📌 <strong>Descripción:</strong> El proyecto es una tienda en línea que ofrece relojes de diferentes estilos para hombres, mujeres y unisex. Los usuarios pueden explorar el catálogo de productos, obtener información sobre los cuidados, y realizar compras con opciones de pago seguras. También tienen acceso a guías de tallas y políticas de devoluciones.
+
+            Para más detalles, puedes visitar el sitio aquí: Ghari Relojes. <br>
             🛠️ <strong>Tecnologías:</strong> HTML, CSS, javaScript <br>
-            🔗 <strong>Demo:</strong> <a href="https://github.com/nereasaga/proyecto-tienda-online" target="_blank">Ver Proyecto</a> | 
-            📂 <strong>Código:</strong> <a href="https://github.com/Aleeza951" target="_blank">Ver en GitHub</a>  
+            🔗 <strong>Demo:</strong> <a href="https://tienda-ghari.netlify.app/" target="_blank">Ver Proyecto</a> | 
+            📂 <strong>Git:</strong> <a href="https://github.com/Aleeza951" target="_blank">Ver en GitHub</a>  
         </p>
     </li>
     <li class="faq-item">
-      <h3 class="faq-question">🌍 Proyectos Destacados 2</h3>
-    <p class="faq-answer">
-      <strong>2️⃣ [Nombre del Proyecto]</strong> <br><br>
-      📌 <strong>Descripción:</strong> Explica brevemente qué hace el proyecto. <br>
-      🛠️ <strong>Tecnologías:</strong> HTML, CSS, [otras herramientas usadas] <br>
-      🔗 <strong>Demo:</strong> <a href="[Enlace al proyecto]" target="_blank">Ver Proyecto</a> | 
-      📂 <strong>Código:</strong> <a href="[Enlace a GitHub]" target="_blank">Ver en GitHub</a>  
-  </p>
-</li>
+      <h3 class="faq-question">🌍Bizballon</h3>
+      <p class="faq-answer">
+          <strong>1️⃣proyecto BIZBALLON]</strong> <br><br>
+          📌 <strong>Descripción:</strong>Este proyecto consiste en crear un sitio web para la Federación de Balonmano Basauri, incluyendo información, 
+          
+          clubes, noticias y contacto. Se debe revisar el código HTML, completar el contenido, optimizar enlaces, mejorar el diseño con CSS y realizar pruebas finales para asegurar su correcto funcionamiento en todos los dispositivos. <br>
+          🛠️ <strong>Tecnologías:</strong> HTML, CSS, javaScript <br>
+          🔗 <strong>Demo:</strong> <a href="https://coruscating-marigold-4e03cc.netlify.app/" target="_blank">Ver Proyecto</a> | 
+          📂 <strong>Git:</strong> <a href="https://github.com/Aleeza951" target="_blank">Ver en GitHub</a>  
+      </p>
+  </li>
 <li class="faq-item">
   <h3 class="faq-question">📚 Educación y Certificaciones</h3>
   <p class="faq-answer">
