cambia home.html

--- a/home.html
+++ b/home.html
@@ -20,7 +20,7 @@
     <ul class="faq-list">
       <li class="faq-item">
           <h3 class="faq-question">👩‍💻 Sobre mí</h3>
-          <p class="faq-answer">¡Hola! Soy Aleeza Sajid, una desarrolladora web de Pakistán. Me apasiona crear sitios web accesibles, funcionales y visualmente atractivos. Comencé mi viaje con HTML y CSS, y ahora estoy expandiendo mis habilidades con JavaScript y otras tecnologías. Siempre busco mejorar y aprender nuevas herramientas para ofrecer experiencias web excepcionales.
+          <p class="faq-answer">¡Hola! Soy Aleeza Sajid, una desarrolladora web. Me apasiona crear sitios web accesibles, funcionales y visualmente atractivos. Comencé mi viaje con HTML y CSS, y ahora estoy expandiendo mis habilidades con JavaScript y otras tecnologías. Siempre busco mejorar y aprender nuevas herramientas para ofrecer experiencias web excepcionales.
 
 En mi tiempo libre, me gusta experimentar con nuevas tecnologías y contribuir a proyectos de código abierto. ¡Estoy emocionada por colaborar y seguir creciendo como desarrolladora!....</p>
       </li>
@@ -84,7 +84,7 @@ En mi tiempo libre, me gusta experimentar con nuevas tecnologías y contribuir a
 <li class="faq-item">
   <h3 class="faq-question">📚 Educación y Certificaciones</h3>
   <p class="faq-answer">
-      🎓 <strong>Curso de Desarrollo Web</strong> - [EN PEÑASCAL KOOPORATIBA] (2024-2025)<br>
+      🎓 <strong>Curso de Desarrollo Web</strong> - [EN PEÑASCAL KOOPERATIBA] (2024-2025)<br>
   </p>
 </li>
 
