--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="extra-info">
             <section class="hero">
                 <div class="profile-container">
-                    <img src="IMG-.jpg" alt="Aleeza Sajid" class="profile-pic">
+                    <img src="Snapchat-1398665875.jpg" alt="Aleeza Sajid" class="profile-pic">
                 </div>
                 <h1>Welcome to Aleeza's World</h1>
                 <p>Discover more about me and my work...</p>
