--- a/home.html
+++ b/home.html
@@ -4,7 +4,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>HOME</title>
+  <title>HOME</title>
   <link rel="stylesheet" href="home.css" />
+  <!-- Font Awesome CDN -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
   <!-- Header -->
@@ -12,7 +15,16 @@
     <div class="title-container">
       <h1>MI PORTFOLIO</h1>
     </div>
+    <nav>
+      <div class="social-icons">
+        <a href="https://twitter.com/yourhandle" target="_blank"><i class="fab fa-twitter"></i></a>
+        <a href="https://github.com/yourhandle" target="_blank"><i class="fab fa-github"></i></a> 
+        <a href="https://linkedin.com/in/yourhandle" target="_blank"><i class="fab fa-linkedin"></i></a>
+      </div>
+    </nav>
   </header>
+</body>
+
 
   <!-- Main Content -->
   <main class="main-content">
